# case-extraction-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
config/: web_config.yaml
config/exporters/: html_template.html
config/pipelines/: batch_config.yaml
config/prompts/: extraction_prompts.yaml
config/schema/: case_schema.json  sample_case.json  vocabularies.json
input/: sample.txt
src/case_extraction/: __init__.py  cli.py  pdf_export.py  utils.py
src/case_extraction/exporters/: __init__.py  base.py  factory.py  html_exporter.py  json_exporter.py  pdf_exporter.py
src/case_extraction/extractors/: __init__.py  case_extractor.py  metadata.py
src/case_extraction/parsers/: __init__.py  docx_parser.py  pdf_parser.py  text_parser.py
src/case_extraction/pipelines/: __init__.py  base.py  batch_ingest.py  paper_to_case.py
src/case_extraction/validators/: __init__.py  case_validator.py
src/case_extraction/web/: __init__.py  app.py  config.py  upload_handler.py
tests/: conftest.py  test_exporters.py  test_pipelines.py  test_validators.py
